--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 
 p{
     text-align: center;
-    font-family: poppins;
-    font-weight: 10px;
-    font-size: 30px;
+    font-family: poppins;  
+    font-size: 40px;
+    color: hsl(283, 82%, 7%);
 }
 
 .calculator {
@@ -60,6 +60,6 @@ p{
   .calculator__key--enter {
     grid-column: 4 / 5;
     grid-row: 2 / span 4;
-    background: hsl(187, 100%, 68%);
+    background: hsl(283, 100%, 79%);
     height: auto;
   }
